--- a/.drone.yml
+++ b/.drone.yml
@@ -34,3 +34,17 @@ volumes:
   - name: dockersock
     host:
       path: /var/run/docker.sock
+
+---
+kind: secret
+name: docker_username
+get:
+  path: eng/docker
+  name: username
+
+---
+kind: secret
+name: docker_password
+get:
+  path: eng/docker
+  name: password
